# tabular

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  compile_commands.json  notes.txt  tabularConfig.cmake.in
docs/: doc.md  getting-started.md
examples/: CMakeLists.txt  alignment.cpp  basic.cpp  column.cpp  irregular.cpp  long.cpp  padding.cpp  row.cpp  simple.cpp  table.cpp  tabular.cpp  tasks.cpp  unregular.cpp  width.cpp
examples/source/: ANSI.cpp  alignment.cpp  basic_table.cpp  border_colors.cpp  border_styling.cpp  colors.cpp  column_color.cpp  configurations.cpp  font.cpp  irregular.cpp  irregular_ANSI.cpp  long.cpp  multi_byte_str.cpp  padding.cpp  paragraph.cpp  rgb.cpp  simple.cpp  styling.cpp  tabular.cpp  width.cpp
include/: Attribute.h  Color.h  Column.h  Config.h  Row.h  String.h  Table.h  tabular.hpp
include/tabular/: Color.h  Column.h  Row.h  STDS.hpp  String.h  alignment.hpp  attribute.hpp  attributes.hpp  border.h  border.hpp  border_style.hpp  codec.hpp  color.h  colors.hpp  column.h  column.hpp  column_line.hpp  config.h  definitions.hpp  detail.hpp  enums.hpp  font_style.hpp  glVars.hpp  global.h  global.hpp  global_vars.hpp  maps.hpp  printer.hpp  range.hpp  render.h  rgb.hpp  row.h  row.hpp  stds.hpp  string.h  string_utils.h  string_utils.hpp  style.h  style.hpp  styles.hpp  (+5 more)
include/utf8conv/: utf8conv.hpp
include/utf8stows/: utf8stws.hpp
include/wcwidth/: unicode_width_tables.h  wcwidth.hpp
single_include/tabular/: tabular.h  tabular.hpp
src/: Attribute.cpp  Color.cpp  Column.cpp  Config.cpp  String.cpp
tests/: CMakeLists.txt  column_tests.cpp
tests/expected/: ANSI_test.txt  WARNING.md  alignment_test.txt  irregular_ANSI_test.txt  irregular_test.txt  long_test.txt  padding_test.txt  simple_test.txt  width_test.txt
tests/source/: ANSI_test.cpp  alignment_test.cpp  irregular_ANSI_test.cpp  irregular_test.cpp  long_test.cpp  padding_test.cpp  simple_test.cpp  width_test.cpp
